# OpenLogi

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_CN.md  devenv.nix  release-plz.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release-plz.yml  release.yml
crates/openlogi-assets/: Cargo.toml
crates/openlogi-assets/src/: http.rs  index.rs  lib.rs  metadata.rs
crates/openlogi-cli/: Cargo.toml
crates/openlogi-cli/src/cmd/: mod.rs
crates/openlogi-cli/src/cmd/assets/: mod.rs  sync.rs
crates/openlogi-core/: Cargo.toml
crates/openlogi-core/examples/: inject_action.rs
crates/openlogi-core/src/: binding.rs  config.rs
crates/openlogi-gui/: Cargo.toml
crates/openlogi-gui/locales/: app.yml
crates/openlogi-gui/src/: app.rs  main.rs  updater.rs
crates/openlogi-gui/src/asset/: mod.rs  sync.rs
crates/openlogi-gui/src/components/: action_popover.rs  device_carousel.rs  dpi_panel.rs  mod.rs
crates/openlogi-gui/src/mouse_model/: view.rs
crates/openlogi-gui/src/platform/: updater.rs
crates/openlogi-gui/src/state/: devices.rs
crates/openlogi-gui/src/watchers/: inventory.rs
crates/openlogi-hid/: Cargo.toml
crates/openlogi-hid/src/: lib.rs
crates/openlogi-hook/: Cargo.toml
crates/openlogi-hook/examples/: frontmost_app.rs
crates/openlogi-hook/src/: linux.rs
docs/: CONFIGURATION.md  DEVELOPMENT.md  README.de.md  README.fr.md  README.ja.md  README.ko.md  README.zh-CN.md  USAGE.md
